force-app/main/default/objects/PO_Stage_Address__c/PO_Stage_Address__c.object-meta.xml
<CustomObject>
    <label>PO Stage Address</label>
    <nameField>
        <label>Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PO Stage Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>