force-app/main/default/objects/PO_Stage_Address__c/fields/Address_Type__c.field-meta.xml
<CustomField>
    <fullName>Address_Type__c</fullName>
    <label>Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shipp to Address</fullName>
            </value>
            <value>
                <fullName>Bill to Address</fullName>
            </value>
            <value>
                <fullName>Reseller Address</fullName>
            </value>
            <value>
                <fullName>End user Address</fullName>
            </value>
            <value>
                <fullName>Ship to Address</fullName>
            </value>
            <value>
                <fullName>Sold to Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>