force-app/main/default/objects/PO_Stage_Address__c/fields/PO_Stage__c.field-meta.xml
<CustomField>
    <fullName>PO_Stage__c</fullName>
    <label>PO Stage</label>
    <referenceTo>PO_Stage__c</referenceTo>
    <relationshipLabel>PO Stage Addresses</relationshipLabel>
    <relationshipName>PO_Stage_Addresses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>