force-app/main/default/objects/PO_Stage_Address__c/fields/Street1__c.field-meta.xml
<CustomField>
    <fullName>Street1__c</fullName>
    <label>Street1</label>
    <type>TextArea</type>
</CustomField>