force-app/main/default/objects/PO_Stage_Address__c/fields/Street2__c.field-meta.xml
<CustomField>
    <fullName>Street2__c</fullName>
    <label>Street2</label>
    <type>TextArea</type>
</CustomField>